--- a/src/app/components/templates/footer/footer.component.css
+++ b/src/app/components/templates/footer/footer.component.css
@@ -10,6 +10,6 @@ i{
     justify-content: end;
     font-weight: 100;
     font-size: 1rem;
-    background-color:black;
+    background-color:#343a40;
     color: beige;
 }
