--- a/src/app/components/templates/header/header.component.css
+++ b/src/app/components/templates/header/header.component.css
@@ -1,7 +1,7 @@
 .header{
     display:flex;
     align-items: center;
-    background-color:black;
+    background-color:#343a40;
     color: beige;
 
 }
