--- a/src/app/components/templates/nav/nav.component.css
+++ b/src/app/components/templates/nav/nav.component.css
@@ -1,14 +1,18 @@
 
   .side-nav{
-    background-color:black;
+    background-color:#6610f7;
     width: 200px;
     
   }
   .side-nav a{
-      color: #Fc9850;
+      color: white;
   }
 
   .side-nav i{
       padding-right: 10px;
+  }
+  .content{
+    padding: 16px;
+    background-color: beige;
   }
   
