--- a/src/app/components/templates/nav/nav.component.html
+++ b/src/app/components/templates/nav/nav.component.html
@@ -1,27 +1,31 @@
 <mat-sidenav-container class="container">
     <mat-sidenav class="side-nav" mode="side" opened fixedInViewport="true" fixedTopGap =64 > 
         <mat-nav-list>
-           <a mat-list-item>
+           <a mat-list-item routerLink="/computers">
                <i class="material-icons"> computer </i>
                Computadores
+               
            </a>
-           <a mat-list-item>
+           <a mat-list-item routerLink="/prints">
                <i class="material-icons">print</i>
                Impressoras
            </a>
-           <a mat-list-item>
+           <a mat-list-item routerLink="/switchs">
                <i class="material-icons">router</i>
                Switchs
            </a>
-           <a mat-list-item>
+           <a mat-list-item routerLink="/setores">
                <i class="material-icons">business</i>
                Setores
            </a>
-           <a mat-list-item >
+           <a mat-list-item routerLink="/estoque">
                <i class="material-icons">inventory</i>
                Estoque
            </a>
         </mat-nav-list>
     </mat-sidenav>
+    <mat-sidenav-content class="content">
+        <router-outlet></router-outlet>
+    </mat-sidenav-content>
 
 </mat-sidenav-container>
