--- a/src/app/components/templates/header/header.component.html
+++ b/src/app/components/templates/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="header mat-elevation-z4"> 
     <span class="logo">
-        <a>
+        <a routerLink="/">
             <img class="logo" src="assets/img/logo2.png" alt="logo">
         </a>
     </span>
@@ -10,7 +10,7 @@
             <i class="material-icons icons">
                 menu
             </i>
-            Inicio
+            Home
         </a>
 
     </span>
