criando o component-read

--- a/src/app/components/templates/nav/nav.component.html
+++ b/src/app/components/templates/nav/nav.component.html
@@ -18,7 +18,7 @@
                <i class="material-icons">business</i>
                Setores
            </a>
-           <a mat-list-item routerLink="/estoque">
+           <a mat-list-item routerLink="/produtos">
                <i class="material-icons">inventory</i>
                Estoque
            </a>
