Corrigindo o erro do ngFOR ao mostrar o produto

--- a/src/app/components/produtos/produto-read/produto-read.component.html
+++ b/src/app/components/produtos/produto-read/produto-read.component.html
@@ -1,5 +1,5 @@
 <ul>
     <li *ngFor= "let p of produtos">
-        {{produtos.descricao}}
+    {{p.id}}->{{p.descricao}}={{p.quantidade}}    
     </li>
 </ul>
