--- a/src/app/components/produtos/produto-read/produto-read.component.html
+++ b/src/app/components/produtos/produto-read/produto-read.component.html
@@ -1,5 +1,37 @@
-<ul>
-    <li *ngFor= "let p of produtos">
-    {{p.id}}->{{p.descricao}}={{p.quantidade}}    
-    </li>
-</ul>
+<div class="mat-elevation-z4">
+    <table mat-table [dataSource] = "produtos">
+      <!-- Id Column -->
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef >Id</th>
+        <td mat-cell *matCellDef="let prod">{{prod.id}}</td>
+      </ng-container>
+  
+      <!-- Descrição Column-->
+      <ng-container matColumnDef="descricao">
+        <th mat-header-cell *matHeaderCellDef >Descrição</th>
+        <td mat-cell *matCellDef="let prod">{{prod.descricao}}</td>
+      </ng-container>
+
+       <!-- Quantidade Colum-->
+       <ng-container matColumnDef="quantidade">
+        <th mat-header-cell *matHeaderCellDef >Quantidade</th>
+        <td mat-cell *matCellDef="let prod">{{prod.quantidade}}</td>
+      </ng-container>
+
+      <!-- Action Colum -->
+        <ng-container matColumnDef="action">
+          <th mat-header-cell *matHeaderCellDef >Ações</th>
+          <td mat-cell *matCellDef="let prod" >
+            <a routerLink="/produto/update/{{prod.id}}" class="edit">
+              <i class = "material-icons">edit</i>
+            </a>
+            <a routerLink="/produto/delete/{{prod.id}}" class="delete">
+              <i class="material-icons">delete</i>
+            </a>  
+          </td>
+        </ng-container>
+  
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let prod; columns: displayedColumns;"></tr>
+    </table>
+</div>
