--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,15 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+form{
+    display: flex;
+    flex-direction: column;
+    
+}
+button{
+    margin:20px 10px 0px 0px;
+}
+
+.title{
+    text-align: center;
+}
