--- a/src/app/views/produto-crud/produto-crud.component.html
+++ b/src/app/views/produto-crud/produto-crud.component.html
@@ -1,2 +1,5 @@
+<button class= "button" mat-raised-button color="primary" (click)="navigateProdutoCreate()" >
+    <mat-icon>post_add</mat-icon>
+    Novo Produto
+</button>
 <app-produto-read></app-produto-read>
-<button class= "button" mat-fab color="primary" (click)="navigateProdutoCreate()" ><i class = "material-icons">add</i></button>
