--- a/src/app/views/setores-crud/setores-crud.component.html
+++ b/src/app/views/setores-crud/setores-crud.component.html
@@ -1,1 +1,2 @@
-<p>setores-crud works!</p>
+<app-setores-read></app-setores-read>
+<button class="button" mat-fab color ="primary"><i class="material-icons">add</i></button>
