--- a/src/app/components/produtos/produto-create/produto-create.component.css
+++ b/src/app/components/produtos/produto-create/produto-create.component.css
@@ -1,12 +1,18 @@
 form{
     display: flex;
     flex-direction: column;
+    margin: 30px;
     
 }
 button{
     margin:20px 10px 0px 0px;
+    width: 130px;
 }
 
 .title{
     text-align: center;
+}
+mat-card{
+    margin: 0% 25% 0% 25%;
+    border-radius: 10px;
 }
