--- a/src/app/components/templates/nav/nav.component.html
+++ b/src/app/components/templates/nav/nav.component.html
@@ -22,6 +22,10 @@
                <i class="material-icons">inventory</i>
                Estoque
            </a>
+           <a mat-list-item routerLink="/pessoas">
+                <i class="material-icons">people</i>
+                Cadastros
+            </a>
         </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content class="content">
