--- a/src/app/components/templates/nav/nav.component.html
+++ b/src/app/components/templates/nav/nav.component.html
@@ -22,7 +22,7 @@
                <i class="material-icons">inventory</i>
                Estoque
            </a>
-           <a mat-list-item routerLink="/pessoas">
+           <a mat-list-item routerLink="/cadastro">
                 <i class="material-icons">people</i>
                 Cadastros
             </a>
