--- a/src/app/components/cadastros/cadastro-create/cadastro-create.component.html
+++ b/src/app/components/cadastros/cadastro-create/cadastro-create.component.html
@@ -5,22 +5,25 @@
         
         <mat-form-field appearance="outline" >
             <mat-label>Nome</mat-label>
-           <input matInput type="text" required> 
+           <input matInput type="text" required
+           [(ngModel)] = "cadastro.nome" name="nome" > 
            <mat-icon matPrefix>person</mat-icon>
         </mat-form-field>
         <mat-form-field appearance="outline">
             <mat-label>E-mail</mat-label>
-            <input matInput type="email" required>
+            <input matInput type="email" required
+            [(ngModel)] = "cadastro.email" name="email">
             <mat-icon matPrefix>contact_mail</mat-icon>
         </mat-form-field>
         <mat-form-field appearance="outline" >
             <mat-label>Telefone</mat-label>
-            <input matInput type="text" required>
+            <input matInput type="text" required
+            [(ngModel)]= "cadastro.numTelefone" name="telefone">
             <mat-icon matPrefix>contact_phone</mat-icon>
         </mat-form-field>
     </form>
     <mat-divider></mat-divider>
-    <button mat-raised-button color="primary"><mat-icon>save</mat-icon></button>
-    <button mat-raised-button color="warn">Cancelar</button>
+    <button mat-raised-button color="primary" (click) = "create()"><mat-icon>save</mat-icon></button>
+    <button mat-raised-button color="warn" (click) = "cancel()">Cancelar</button>
 </mat-card>
 
