--- a/src/app/components/cadastros/cadastro-read/cadastro-read.component.html
+++ b/src/app/components/cadastros/cadastro-read/cadastro-read.component.html
@@ -1,5 +1,5 @@
 <div class="mat-elevation-z4">
-    <table mat-table [dataSource] = "supervisores">
+    <table mat-table [dataSource] = "cadastro">
       <!-- Id Column -->
       <!-- <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef >Id</th>
@@ -7,16 +7,22 @@
       </ng-container> -->
   
       <!-- Nome Supervisor Column-->
-      <ng-container matColumnDef="supervisorNome">
+      <ng-container matColumnDef="nome">
         <th mat-header-cell *matHeaderCellDef >Nome</th>
-        <td mat-cell *matCellDef="let sup">{{sup.supervisorNome}}</td>
+        <td mat-cell *matCellDef="let cadastro">{{cadastro.nome}}</td>
         
+      </ng-container>
+
+      <!-- email Colum-->
+      <ng-container matColumnDef="email">
+        <th mat-header-cell *matHeaderCellDef >E-mail</th>
+        <td mat-cell *matCellDef="let cadastro">{{cadastro.email}}</td>
       </ng-container>
 
        <!-- Telefone Colum-->
        <ng-container matColumnDef="numTelefone">
         <th mat-header-cell *matHeaderCellDef >Telefone</th>
-        <td mat-cell *matCellDef="let sup">{{sup.numTelefone}}</td>
+        <td mat-cell *matCellDef="let cadastro">{{cadastro.numTelefone}}</td>
       </ng-container>
 
       <!-- Action Colum -->
