Organizando o service em pasta

--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -3,6 +3,6 @@
         Bem vindo
     </mat-card-title>
     <mat-card-subtitle class="subtitle">
-        Sistema de controle de equipamentos e produtos desenvolvido by EBS-TECNOLOGIA
+        Sistema de controle de equipamentos e produtos desenvolvido por EBS-TECNOLOGIA
     </mat-card-subtitle>
 </mat-card>
