--- a/src/app/components/templates/header/header.component.css
+++ b/src/app/components/templates/header/header.component.css
@@ -10,6 +10,7 @@
     align-items: center;
     /* remover a decoração dos links */
     text-decoration: none;
+    color:beige;
     
 }
 .header .logo{
