--- a/src/app/components/templates/header/header.component.html
+++ b/src/app/components/templates/header/header.component.html
@@ -6,11 +6,11 @@
     </span>
     <span class="title-group">
 
-        <a>
+        <a routerLink="{{url}}">
             <i class="material-icons icons">
-                menu
+                {{icone}}
             </i>
-            Home
+            {{titel}}
         </a>
 
     </span>
