--- a/src/app/views/setores-crud/setores-crud.component.html
+++ b/src/app/views/setores-crud/setores-crud.component.html
@@ -1,2 +1,5 @@
+<button class="button" mat-raised-button color="primary">
+    <mat-icon>add_business</mat-icon>
+    Novo Setor    
+</button>
 <app-setores-read></app-setores-read>
-<button class="button" mat-fab color ="primary"><i class="material-icons">add</i></button>
