--- a/src/app/components/cadastros/cadastro-create/cadastro-create.component.html
+++ b/src/app/components/cadastros/cadastro-create/cadastro-create.component.html
@@ -23,7 +23,7 @@
         </mat-form-field>
     </form>
     <mat-divider></mat-divider>
-    <button mat-raised-button color="primary" (click) = "create()"><mat-icon>save</mat-icon></button>
-    <button mat-raised-button color="warn" (click) = "cancel()">Cancelar</button>
+    <button mat-raised-button color="primary" (click) = "create()"><mat-icon>save</mat-icon>Salvar</button>
+    <button mat-raised-button color="warn" (click) = "cancel()"><mat-icon>cancel</mat-icon>Cancelar</button>
 </mat-card>
 
