--- a/src/app/components/cadastros/cadastro-read/cadastro-read.component.html
+++ b/src/app/components/cadastros/cadastro-read/cadastro-read.component.html
@@ -35,7 +35,7 @@
             <a routerLink="" class="delete">
               <i class="material-icons">delete</i>
             </a>
-            <a href="">
+            <a class="visu">
               <i class="material-icons">
                 visibility
                 </i>
