--- a/src/app/components/templates/nav/nav.component.html
+++ b/src/app/components/templates/nav/nav.component.html
@@ -1,7 +1,7 @@
 <mat-sidenav-container class="container">
     <mat-sidenav class="side-nav" mode="side" opened fixedInViewport="true" fixedTopGap =64 > 
         <mat-nav-list>
-           <a mat-list-item routerLink="/computers">
+           <a mat-list-item routerLink="/equipamentos">
                <i class="material-icons"> computer </i>
                Computadores
                
