--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,9 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 form{
     display: flex;
     flex-direction: column;
+    display: flex;
+    margin-top: 40px;
+    margin-bottom: 20px;
     
 }
 .button{
@@ -29,5 +32,26 @@ table{
 }
 .delete > i{
     color: #e35e6b;
+
+    
+}
+.visu{
+    color:black;
+    margin-left: 10px;
+}
+
+.mat-card{
+    margin: 2% 25% 0% 25%;
+    border-radius: 10px;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-bottom: 1%;
+    /* background-color: #a8a2a2; */
+    
+   
+    
+}
+mat-card-title{
+    text-align: center;
     
 }
