Modificando a navegaçao && adcionando novos componentes

--- a/src/app/views/equipamentos-crud/equipamentos-crud.component.html
+++ b/src/app/views/equipamentos-crud/equipamentos-crud.component.html
@@ -1,5 +1,5 @@
 <div>
-    <mat-card>
+    <mat-card routerLink="/computadores">
     <mat-card-header>
         <mat-card-title>Computadores</mat-card-title>
     </mat-card-header>
@@ -11,4 +11,28 @@
         <button mat-raised-button color="primary"><mat-icon matPrefix>computer</mat-icon> list</button>
     
     </mat-card>
+    <mat-card>
+        <mat-card-header>
+            <mat-card-title>Impressoras</mat-card-title>
+        </mat-card-header>
+        <mat-divider></mat-divider>
+        <mat-card-content>
+    
+        </mat-card-content>
+        <mat-divider></mat-divider>
+            <button mat-raised-button color="primary"><mat-icon matPrefix>computer</mat-icon> list</button>
+        
+        </mat-card>
+        <mat-card>
+            <mat-card-header>
+                <mat-card-title>Switchs</mat-card-title>
+            </mat-card-header>
+            <mat-divider></mat-divider>
+            <mat-card-content>
+        
+            </mat-card-content>
+            <mat-divider></mat-divider>
+                <button mat-raised-button color="primary"><mat-icon matPrefix>computer</mat-icon> list</button>
+            
+            </mat-card>
 </div>
