--- a/src/app/components/equipamentos/computadores/computador-read/computador-read.component.html
+++ b/src/app/components/equipamentos/computadores/computador-read/computador-read.component.html
@@ -1,1 +1,37 @@
-<mat-card></mat-card>
+<div class="mat-elevation-z4">
+    <table mat-table [dataSource] = "computador">
+      <!-- Id Column -->
+      <ng-container matColumnDef="nome">
+        <th mat-header-cell *matHeaderCellDef >Nome</th>
+        <td mat-cell *matCellDef="let comp">{{comp.nomeComputador}}</td>
+      </ng-container>
+  
+      <!-- Descrição Column-->
+      <ng-container matColumnDef="ip">
+        <th mat-header-cell *matHeaderCellDef >Ip</th>
+        <td mat-cell *matCellDef="let comp">{{comp.ip}}</td>
+      </ng-container>
+
+       <!-- Quantidade Colum-->
+       <ng-container matColumnDef="setor">
+        <th mat-header-cell *matHeaderCellDef >Setor</th>
+        <td mat-cell *matCellDef="let comp">{{comp.setor.setorNome}}</td>
+      </ng-container>
+
+      <!-- Action Colum -->
+        <ng-container matColumnDef="action">
+          <th mat-header-cell *matHeaderCellDef >Ações</th>
+          <td mat-cell *matCellDef="let prod" >
+            <a routerLink="/produto/update/{{prod.id}}" class="edit">
+              <i class = "material-icons">edit</i>
+            </a>
+            <a routerLink="/produto/delete/{{prod.id}}" class="delete">
+              <i class="material-icons">delete</i>
+            </a>  
+          </td>
+        </ng-container>
+  
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let prod; columns: displayedColumns;"></tr>
+    </table>
+</div>
