--- a/src/app/components/templates/nav/nav.component.html
+++ b/src/app/components/templates/nav/nav.component.html
@@ -3,17 +3,17 @@
         <mat-nav-list>
            <a mat-list-item routerLink="/equipamentos">
                <i class="material-icons"> computer </i>
-               Computadores
+                Equipamentos
                
            </a>
-           <a mat-list-item routerLink="/prints">
+           <!-- <a mat-list-item routerLink="/prints">
                <i class="material-icons">print</i>
                Impressoras
-           </a>
-           <a mat-list-item routerLink="/switchs">
+           </a> -->
+           <!-- <a mat-list-item routerLink="/switchs">
                <i class="material-icons">router</i>
                Switchs
-           </a>
+           </a> -->
            <a mat-list-item routerLink="/setores">
                <i class="material-icons">business</i>
                Setores
