criando cards para os equipamentos

--- a/src/app/views/equipamentos-crud/equipamentos-crud.component.html
+++ b/src/app/views/equipamentos-crud/equipamentos-crud.component.html
@@ -1,38 +1,48 @@
-<div>
-    <mat-card routerLink="/computadores">
+<div fxLayout="row" fxLayoutAlign="start center" fxFlex=" 0 1 calc(33.3% - 11px" fxFlex.lt-md="0 1 cacl(50% - 11px)"
+  fxFlex.lt-sm="100%">
+  <mat-card class="example-card">
     <mat-card-header>
-        <mat-card-title>Computadores</mat-card-title>
+      <div mat-card-avatar class="example-header-image"></div>
+      <mat-card-title>Computadores</mat-card-title>
+      <mat-card-subtitle>Computer</mat-card-subtitle>
     </mat-card-header>
-    <mat-divider></mat-divider>
+    <img mat-card-image src="../../../assets/img/Img-equipamentos/Computador-Desktop-Dell-Vostro.jpg" alt="Photo of a Shiba Inu">
     <mat-card-content>
-
+      <p>
+        Clique na imagem para ser redirecioando a pagina de computadores
+      </p>
     </mat-card-content>
-    <mat-divider></mat-divider>
-        <button mat-raised-button color="primary"><mat-icon matPrefix>computer</mat-icon> list</button>
-    
-    </mat-card>
-    <mat-card>
-        <mat-card-header>
-            <mat-card-title>Impressoras</mat-card-title>
-        </mat-card-header>
-        <mat-divider></mat-divider>
-        <mat-card-content>
-    
-        </mat-card-content>
-        <mat-divider></mat-divider>
-            <button mat-raised-button color="primary"><mat-icon matPrefix>computer</mat-icon> list</button>
-        
-        </mat-card>
-        <mat-card>
-            <mat-card-header>
-                <mat-card-title>Switchs</mat-card-title>
-            </mat-card-header>
-            <mat-divider></mat-divider>
-            <mat-card-content>
-        
-            </mat-card-content>
-            <mat-divider></mat-divider>
-                <button mat-raised-button color="primary"><mat-icon matPrefix>computer</mat-icon> list</button>
-            
-            </mat-card>
+   
+  </mat-card>
+  <mat-card class="example-card">
+    <mat-card-header>
+      <div mat-card-avatar class="example-header-image"></div>
+      <mat-card-title>Impressoras</mat-card-title>
+      <mat-card-subtitle>Prints</mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image src="../../../assets/img/Img-equipamentos/impressoras.png" alt="Photo of a Shiba Inu">
+    <mat-card-content>
+      <p>
+        Clique na imagem para ser redirecioando a pagina de Impressoras
+      </p>
+    </mat-card-content>
+  
+  </mat-card>
+  <mat-card class="example-card">
+    <mat-card-header>
+      <div mat-card-avatar class="example-header-image"></div>
+      <mat-card-title>Impressoras</mat-card-title>
+      <mat-card-subtitle>Prints</mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image src="../../../assets/img/Img-equipamentos/impressoras.png" alt="Photo of a Shiba Inu">
+    <mat-card-content>
+      <p>
+        Clique na imagem para ser redirecioando a pagina de Impressoras
+      </p>
+    </mat-card-content>
+  
+  </mat-card>
+  
+  
+
 </div>
