--- a/src/app/components/equipamentos/computadores/computador-read/computador-read.component.html
+++ b/src/app/components/equipamentos/computadores/computador-read/computador-read.component.html
@@ -1,4 +1,8 @@
 <div class="mat-elevation-z4">
+  <mat-form-field appearance="outline">
+    <mat-label>Buscar</mat-label>
+    <input matInput>
+  </mat-form-field>
     <table mat-table [dataSource] = "computador">
       <!-- Id Column -->
       <ng-container matColumnDef="nome">
