--- a/src/app/views/equipamentos-crud/equipamentos-crud.component.css
+++ b/src/app/views/equipamentos-crud/equipamentos-crud.component.css
@@ -1,10 +1,16 @@
-mat-card{
-    display: flexbox;
-    width: 200px;
-    height: 200px;
+div{
+    width: 3px;
 }
-button{
-    margin-top: 100%;
-    color: black;
-    position:relative;
+
+
+  mat-card-title{
+      text-size-adjust: 23px;
+  }
+  mat-card{
+    margin:5px;
+    margin-top: 3px;
+    height: 90%;
+    width: 100%;
+    padding-right: 20%;
+    padding-left: 20%;
 }
