--- a/src/app/views/equipamentos-crud/equipamentos-crud.component.html
+++ b/src/app/views/equipamentos-crud/equipamentos-crud.component.html
@@ -1,48 +1,13 @@
-<div fxLayout="row" fxLayoutAlign="start center" fxFlex=" 0 1 calc(33.3% - 11px" fxFlex.lt-md="0 1 cacl(50% - 11px)"
-  fxFlex.lt-sm="100%">
-  <mat-card class="example-card">
-    <mat-card-header>
-      <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title>Computadores</mat-card-title>
-      <mat-card-subtitle>Computer</mat-card-subtitle>
-    </mat-card-header>
-    <img mat-card-image src="../../../assets/img/Img-equipamentos/Computador-Desktop-Dell-Vostro.jpg" alt="Photo of a Shiba Inu">
-    <mat-card-content>
-      <p>
-        Clique na imagem para ser redirecioando a pagina de computadores
-      </p>
-    </mat-card-content>
-   
-  </mat-card>
-  <mat-card class="example-card">
-    <mat-card-header>
-      <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title>Impressoras</mat-card-title>
-      <mat-card-subtitle>Prints</mat-card-subtitle>
-    </mat-card-header>
-    <img mat-card-image src="../../../assets/img/Img-equipamentos/impressoras.png" alt="Photo of a Shiba Inu">
-    <mat-card-content>
-      <p>
-        Clique na imagem para ser redirecioando a pagina de Impressoras
-      </p>
-    </mat-card-content>
-  
-  </mat-card>
-  <mat-card class="example-card">
-    <mat-card-header>
-      <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title>Impressoras</mat-card-title>
-      <mat-card-subtitle>Prints</mat-card-subtitle>
-    </mat-card-header>
-    <img mat-card-image src="../../../assets/img/Img-equipamentos/impressoras.png" alt="Photo of a Shiba Inu">
-    <mat-card-content>
-      <p>
-        Clique na imagem para ser redirecioando a pagina de Impressoras
-      </p>
-    </mat-card-content>
-  
-  </mat-card>
-  
-  
+<div class="div-button">
+  <button mat-raised-button color = "warn" (click) = "navigateToComputer()">Computadores</button>
+  <button mat-raised-button color="warn" (click) = "navigateToImpressoras()">Impressoras</button>
+  <button mat-raised-button color = "warn" (click) = "navigateToMonitores()">Monitores</button>
+  <button mat-raised-button color = "warn"(click) = "navigateToEstabilizadores()">Estabilizadores</button>
+  <button mat-raised-button color = "warn" (click) = "navigateToSwitchs()">Switchs</button>
+</div>
+<div class="img">
+
+  <img src = "../../../assets/img/suporte01.jpg">
 
 </div>
+
