--- a/src/app/views/equipamentos-crud/equipamentos-crud.component.css
+++ b/src/app/views/equipamentos-crud/equipamentos-crud.component.css
@@ -1,16 +1,14 @@
-div{
-    width: 3px;
+.div-button{
+    width: 100%;
+    text-align: center;
+    
 }
 
-
-  mat-card-title{
-      text-size-adjust: 23px;
-  }
-  mat-card{
-    margin:5px;
-    margin-top: 3px;
-    height: 90%;
-    width: 100%;
-    padding-right: 20%;
-    padding-left: 20%;
+button{
+    margin-left: 5px;
+    width: 200px;
+}
+.img{
+    text-align: center;
+    margin-top: 15px;
 }
