--- a/src/app/views/produto-crud/produto-crud.component.html
+++ b/src/app/views/produto-crud/produto-crud.component.html
@@ -1,4 +1,4 @@
-<button class= "button" mat-raised-button color="primary" (click)="navigateProdutoCreate()" >
+<button  mat-button class= "button" mat-raised-button color="primary" (click)="navigateProdutoCreate()" >
     <mat-icon>post_add</mat-icon>
     Novo Produto
 </button>
