--- a/src/app/components/templates/header/header.component.css
+++ b/src/app/components/templates/header/header.component.css
@@ -24,3 +24,30 @@
 .header .title-group i{
     padding-right: 10px;
 }
+button{
+    background-color: #343a40;;
+}
+
+.side-nav{
+    background-color:#6610f7;
+    width: 200px;
+    
+  }
+  .side-nav a{
+      color: white;
+  }
+
+  .side-nav i{
+      padding-right: 10px;
+  }
+  .content{
+    padding: 16px;
+    /* background-color: #222222; */
+  }
+  .container{
+    background-color: #adadad;
+    height: 80%;
+  }
+  mat-form-field{
+    background-color: beige;
+  }
