criando o spinner tela lista produtos

--- a/src/app/components/produtos/produto-read/produto-read.component.css
+++ b/src/app/components/produtos/produto-read/produto-read.component.css
@@ -13,3 +13,10 @@ table{
     color: #e35e6b;
     
 }
+.loading{
+    padding: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.15);
+}
