--- a/src/app/views/produto-crud/produto-crud.component.html
+++ b/src/app/views/produto-crud/produto-crud.component.html
@@ -1,5 +1,8 @@
-<button  mat-button class= "button" mat-raised-button color="primary" (click)="navigateProdutoCreate()" >
+<mat-toolbar color="primary" class="mat-toolbar">
+
+  <button class="button" mat-flat-button color="accent" (click)="navigateProdutoCreate()">
     <mat-icon>post_add</mat-icon>
     Novo Produto
-</button>
+  </button>
+</mat-toolbar>
 <app-produto-read></app-produto-read>
