--- a/src/app/components/produtos/produto-create/produto-create.component.html
+++ b/src/app/components/produtos/produto-create/produto-create.component.html
@@ -22,5 +22,9 @@
         <mat-icon>cancel</mat-icon>
         Cancelar
     </button>
+    <!-- <ng-template #loading>
+        <mat-spinner ></mat-spinner>
+    </ng-template> -->
 </mat-card>
+
 
