--- a/src/app/components/templates/header/header.component.html
+++ b/src/app/components/templates/header/header.component.html
@@ -1,55 +1,64 @@
 <mat-toolbar class="header mat-elevation-z4">
-    <button mat-icon-button (click) = "sidenav.toggle()">
-        <mat-icon class="menu" >menu</mat-icon>
-    </button>
-    <span class="logo">
-        <a>
-            <img class="logo" src="assets/img/logo2.png" alt="logo">
-        </a>
-    </span>
-    <span class="title-group">
+  <button mat-icon-button (click)="sidenav.toggle()">
+    <mat-icon class="menu">menu</mat-icon>
+  </button>
+  <span class="logo">
+    <a>
+      <img class="logo" src="assets/img/logo2.png" alt="logo">
+    </a>
+  </span>
+  <span class="title-group">
 
-        <a routerLink="{{url}}">
-            <i class="material-icons icons">
-                {{icone}}
-            </i>
-            {{titel}}
-        </a>
+    <a routerLink="{{url}}">
+      <i class="material-icons icons">
+        {{icone}}
+      </i>
+      {{titel}}
+    </a>
 
-    </span>
+  </span>
 </mat-toolbar>
 <mat-sidenav-container class="container">
-    <mat-sidenav class="side-nav"mode="side"opened = "false" #sidenav fixedTopGap =64 > 
-        <mat-nav-list>
-           <a mat-list-item routerLink="/equipamentos">
-               <i class="material-icons"> computer </i>
-                Equipamentos
-               
-           </a>
-           <!-- <a mat-list-item routerLink="/prints">
+  <mat-sidenav class="side-nav" mode="side" opened="false" #sidenav fixedTopGap=64>
+    <mat-nav-list>
+      <a mat-list-item routerLink="/equipamentos">
+        <i class="material-icons"> computer </i>
+        Equipamentos
+
+      </a>
+      <!-- <a mat-list-item routerLink="/prints">
                <i class="material-icons">print</i>
                Impressoras
            </a> -->
-           <!-- <a mat-list-item routerLink="/switchs">
+      <!-- <a mat-list-item routerLink="/switchs">
                <i class="material-icons">router</i>
                Switchs
            </a> -->
-           <a mat-list-item routerLink="/setores">
-               <i class="material-icons">business</i>
-               Setores
-           </a>
-           <a mat-list-item routerLink="/produtos">
-               <i class="material-icons">inventory</i>
-               Estoque
-           </a>
-           <a mat-list-item routerLink="/cadastro">
-                <i class="material-icons">people</i>
-                Cadastros
-            </a>
-        </mat-nav-list>
-    </mat-sidenav>
-    <mat-sidenav-content class="content">
-        <router-outlet></router-outlet>
-    </mat-sidenav-content>
+      <a mat-list-item routerLink="/setores">
+        <i class="material-icons">business</i>
+        Setores
+      </a>
+      <a mat-list-item routerLink="/produtos">
+        <i class="material-icons">inventory</i>
+        Estoque
+      </a>
+      <a mat-list-item routerLink="/cadastro">
+        <i class="material-icons">people</i>
+        Cadastros
+      </a>
+      <a>
+      <i class="material-icons">storage</i>
+      <button mat-button [matMenuTriggerFor]="menu">Menu</button>
+      <mat-menu #menu="matMenu">
+        <button mat-menu-item>Item 1</button>
+        <button mat-menu-item>Item 2</button>
+      </mat-menu>
+    </a>
+
+    </mat-nav-list>
+  </mat-sidenav>
+  <mat-sidenav-content class="content">
+    <router-outlet></router-outlet>
+  </mat-sidenav-content>
 
 </mat-sidenav-container>
