criado modulo saida de produtos

--- a/src/app/components/produtos/produto-read/produto-read.component.html
+++ b/src/app/components/produtos/produto-read/produto-read.component.html
@@ -29,6 +29,9 @@
           <a routerLink="/produto/delete/{{prod.id}}" class="delete">
             <i class="material-icons">delete</i>
           </a>
+          <a routerLink="/produto/saida/{{prod.id}}" class="exit">
+            <i class="material-icons">logout</i>
+          </a>
         </td>
       </ng-container>
 
