--- a/src/app/components/setores/setores-read/setores-read.component.html
+++ b/src/app/components/setores/setores-read/setores-read.component.html
@@ -35,7 +35,7 @@
               <i class="material-icons">delete</i>
             </a>
             <a routerLink="" class="visu">
-              <mat-icon>removegit _red_eye</mat-icon>
+              <mat-icon>visibility</mat-icon>
             </a> 
           </td>
         </ng-container>
