--- a/src/app/components/setores/setores-read/setores-read.component.html
+++ b/src/app/components/setores/setores-read/setores-read.component.html
@@ -1,5 +1,6 @@
-<div class="mat-elevation-z4">
-    <table mat-table [dataSource] = "setores">
+<mat-card>
+  <div class="mat-elevation-z4" *ngIf="setores$ | async as setores; else loading">
+    <table mat-table [dataSource]="setores">
       <!-- Id Column -->
       <!-- <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef >Id</th>
@@ -8,39 +9,48 @@
    -->
       <!-- Setor Column-->
       <ng-container matColumnDef="setor">
-        <th mat-header-cell *matHeaderCellDef >Setor</th>
+        <th mat-header-cell *matHeaderCellDef>Setor</th>
         <td mat-cell *matCellDef="let set">{{set.setorNome}}</td>
       </ng-container>
 
-       <!-- Telefone Colum-->
-       <ng-container matColumnDef="telefone">
-        <th mat-header-cell *matHeaderCellDef >Telefone</th>
+      <!-- Telefone Colum-->
+      <ng-container matColumnDef="telefone">
+        <th mat-header-cell *matHeaderCellDef>Telefone</th>
         <td mat-cell *matCellDef="let set">{{set.telefone}}</td>
       </ng-container>
 
-         <!-- Ramal Colum-->
-         <ng-container matColumnDef="ramal">
-            <th mat-header-cell *matHeaderCellDef >Ramal</th>
-            <td mat-cell *matCellDef="let set">{{set.ramal}}</td>
-          </ng-container>
+      <!-- Ramal Colum-->
+      <ng-container matColumnDef="ramal">
+        <th mat-header-cell *matHeaderCellDef>Ramal</th>
+        <td mat-cell *matCellDef="let set">{{set.ramal}}</td>
+      </ng-container>
 
       <!-- Action Colum -->
       <ng-container matColumnDef="action">
-          <th mat-header-cell *matHeaderCellDef >Ações</th>
-          <td mat-cell *matCellDef="let setor" >
-            <a routerLink="/setores{{setor.id}}" class="edit">
-              <i class = "material-icons">edit</i>
-            </a>
-            <a routerLink="{{setor.id}}" class="delete">
-              <i class="material-icons">delete</i>
-            </a>
-            <a routerLink="" class="visu">
-              <mat-icon>visibility</mat-icon>
-            </a> 
-          </td>
-        </ng-container>
+        <th mat-header-cell *matHeaderCellDef>Ações</th>
+        <td mat-cell *matCellDef="let setor">
+          <a routerLink="/setores{{setor.id}}" class="edit">
+            <i class="material-icons">edit</i>
+          </a>
+          <a routerLink="{{setor.id}}" class="delete">
+            <i class="material-icons">delete</i>
+          </a>
+          <a routerLink="" class="visu">
+            <mat-icon>visibility</mat-icon>
+          </a>
+        </td>
+      </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let prod; columns: displayedColumns;"></tr>
     </table>
-</div>
+  </div>
+
+  <ng-template #loading class="loading">
+    <div class="loading">
+      <mat-spinner></mat-spinner>
+    </div>
+  </ng-template>
+
+</mat-card>
+
