--- a/src/styles.css
+++ b/src/styles.css
@@ -55,3 +55,10 @@ mat-card-title{
     text-align: center;
     
 }
+.loading{
+    padding: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.15);
+}
